--- a/discord_clone_api/src/main/resources/application.yml
+++ b/discord_clone_api/src/main/resources/application.yml
@@ -46,4 +46,4 @@ mybatis:
     cache-enabled: true
     call-setters-on-nulls: true
     default-statement-timeout: 500
-  type-aliases-package: com.example.todolist_api_spr.vo
+  type-aliases-package: com.example.discord_clone_api.vo
