시큐리티 두번째 예제 프로젝트 추가

--- a/discord_clone_api_ver2/src/main/resources/application.yml
+++ b/discord_clone_api_ver2/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
   #      suffix: .jsp
 
   datasource:
-    url: jdbc:mariadb://125.133.48.203:52099/userdb
+    url: jdbc:mariadb://125.133.48.203:52099/todolistdb
     username: heatmaster
     password: rpn123!!
     hikari:
