--- a/discord_clone/package.json
+++ b/discord_clone/package.json
@@ -19,7 +19,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.3.4",
     "vue-qrcode-component": "^2.1.1",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
