--- a/discord_clone/package.json
+++ b/discord_clone/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^3.3.4",
+    "vue-cookies": "^1.8.3",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
