--- a/discord_clone/package.json
+++ b/discord_clone/package.json
@@ -14,11 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vuepic/vue-datepicker": "^7.2.2",
+    "ag-grid-community": "^30.2.1",
+    "ag-grid-vue3": "^30.2.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^3.3.4",
+    "vue-class-component": "^8.0.0-rc.1",
     "vue-cookies": "^1.8.3",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.0.13",
