회원가입 버전 프론트엔드 > 테스트 페이지 ag그리드(2)

--- a/discord_clone_api/src/main/resources/application.yml
+++ b/discord_clone_api/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
   #      prefix: /WEB-INF/jsp/                                   # View Resolver setting
   #      suffix: .jsp
   datasource:
-    url: jdbc:mariadb://125.133.48.203:52099/userdb
+    url: jdbc:mariadb://rpns.iptime.org:52099/userdb
     username: heatmaster
     password: rpn123!!
     hikari:
