--- a/chat_project/vue_chat/package.json
+++ b/chat_project/vue_chat/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue": "^3.3.4",
+    "vue-loader": "^17.2.2",
+    "vuerify": "^0.4.0",
+    "vue-template-compiler": "^2.7.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
