채팅 프로젝트 front > 1.채팅화면 추가 / back > 1.로그인 로직 수정

--- a/chat_project/vue_chat_server/src/main/resources/application.yml
+++ b/chat_project/vue_chat_server/src/main/resources/application.yml
@@ -45,7 +45,7 @@ mybatis:
     cache-enabled: true
     call-setters-on-nulls: true
     default-statement-timeout: 500
-  type-aliases-package: com.example.discord_clone_api.vo
+  type-aliases-package: com.example.vue_chat_server.vo
 logging:
   file:
     path: /Users/hong/Logs/kotlin-spring
