--- a/chat_project/vue_chat/package.json
+++ b/chat_project/vue_chat/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
-    "vue-router": "^4.2.5",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.3.4",
     "vue-loader": "^17.2.2",
+    "vue-router": "^4.2.5",
+    "vue-template-compiler": "^2.7.14",
     "vuerify": "^0.4.0",
-    "vue-template-compiler": "^2.7.14"
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
